[package]
name = "luo-capture"
version = "0.1.0"
edition = "2024"
authors = ["luo"]
description = "A high-performance screen capture module using DXGI technology for Windows platforms"
license = "MIT"
repository = "https://github.com/luo1227/luo-capture-rs.git"
homepage = "https://github.com/luo1227/luo-capture-rs"
documentation = "https://docs.rs/luo-capture-rs"
readme = "README.md"
keywords = ["screen-capture", "dxgi", "windows", "graphics", "directx"]
categories = ["graphics", "multimedia::images", "os::windows-apis"]

[dependencies]
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
