[package]
name = "luo-capture"
version = "0.1.0"
edition = "2024"
authors = ["luo"]
description = "A high-performance screen capture module using DXGI technology for Windows platforms"
license = "MIT"
repository = "https://github.com/luo1227/luo-capture-rs.git"
homepage = "https://github.com/luo1227/luo-capture-rs"
documentation = "https://docs.rs/luo-capture-rs"
readme = "README.md"
keywords = ["screen-capture", "dxgi", "windows", "graphics", "directx"]
categories = ["graphics", "multimedia::images", "os::windows-apis"]

[dependencies]
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Graphics_Gdi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D"] }
windows-core = "0.62.2"
